Fix Can't compatible with torch list setting. #10